PODS-4777: spacing issue in search textbox

--- a/app/assets/stylesheets/partials/_spacing.scss
+++ b/app/assets/stylesheets/partials/_spacing.scss
@@ -10,6 +10,9 @@ System that aren't yet in our service
 .govuk-margin-bottom-0{
   margin-bottom: 0;
 }
+.govuk-margin-bottom-3{
+  margin-bottom: 15px;
+}
 .dl--margin-bottom{
   margin-bottom: 20px;
 }
